Fix: Empty Mini Cart contents overflow issue (https://github.com/woocommerce/woocommerce-blocks/pull/5635)
* fix: add wrapper for empty mini cart contents inner blocks. Allow inner content to be scrollable

* fix overflow issue for the editor

* add padding for the empty cart view

--- a/plugins/woocommerce-blocks/assets/js/blocks/cart-checkout/mini-cart/style.scss
+++ b/plugins/woocommerce-blocks/assets/js/blocks/cart-checkout/mini-cart/style.scss
@@ -65,6 +65,7 @@
 
 		button {
 			color: inherit;
+			z-index: 9999;
 		}
 
 		svg {
@@ -82,6 +83,11 @@
 	height: 100vh;
 	padding: 0;
 	justify-content: center;
+}
+
+.wp-block-woocommerce-empty-mini-cart-contents-block {
+	overflow-y: auto;
+	padding: $gap-largest $gap $gap;
 }
 
 h2.wc-block-mini-cart__title {
